Fixed code for checkpoint 2